# eco2

./: .gitignore  Cargo.toml  README.md
config/: local-testnet.json
docs/: interfaces.md
example/: .gitignore  events-listener.ts  package.json  simple.ts
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/carbon-assets/: Cargo.toml
pallets/carbon-assets/src/: lib.rs
pallets/carbon-exchange/: Cargo.toml
pallets/carbon-exchange/src/: lib.rs
pallets/standard-assets/: Cargo.toml
pallets/standard-assets/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs
scripts/: start_local_net.sh  start_local_node.sh  start_local_testnet.sh  start_local_validator.sh
