[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'node-template'

[dependencies]

jsonrpc-core = '14.0.3'
structopt = '0.3.8'

sc-basic-authorship = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sc-cli = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sc-client-api = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sc-consensus = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sc-consensus-aura = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sc-executor = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sc-finality-grandpa = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sc-rpc = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sc-rpc-api = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sc-service = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sc-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-api = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-block-builder = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-blockchain = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-consensus = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-consensus-aura = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-core = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-finality-grandpa = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-inherents = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
substrate-frame-rpc-system = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}

pallet-transaction-payment-rpc = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}

node-template-runtime = {path = '../runtime'}

[build-dependencies]
substrate-build-script-utils = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
