[package]
authors = ['cryptomancc <https://github.com/ECO2Ledger>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'eco2'
repository = 'https://github.com/ECO2Ledger/eco2'
version = '2.0.1'

[[bin]]
name = 'eco2'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.1'

[dependencies]
jsonrpc-core = '15.0.0'
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.41"
structopt = '0.3.8'

# local dependencies
eco2-runtime = {path = '../runtime', version = '0.9.0'}

# Substrate dependencies
frame-benchmarking = '2.0.1'
frame-benchmarking-cli = '2.0.1'
pallet-im-online = '2.0.1'
pallet-transaction-payment-rpc = '2.0.1'
sc-basic-authorship = '0.8.1'
sc-cli = {features = ['wasmtime'], version = '0.8.1'}
sc-client-api = '2.0.1'
sc-consensus = '0.8.1'
sc-consensus-aura = '0.8.1'
sc-executor = {features = ['wasmtime'], version = '0.8.1'}
sc-finality-grandpa = '0.8.1'
sc-rpc = '2.0.1'
sc-rpc-api = '0.8.1'
sc-service = {features = ['wasmtime'], version = '0.8.1'}
sc-transaction-pool = '2.0.1'
sp-api = '2.0.1'
sp-authority-discovery = '2.0.1'
sp-block-builder = '2.0.1'
sp-blockchain = '2.0.1'
sp-consensus = '0.8.1'
sp-consensus-aura = '0.8.1'
sp-core = '2.0.1'
sp-finality-grandpa = '2.0.1'
sp-inherents = '2.0.1'
sp-runtime = '2.0.1'
sp-transaction-pool = '2.0.1'
substrate-frame-rpc-system = '2.0.1'

[features]
default = []
runtime-benchmarks = ['eco2-runtime/runtime-benchmarks']
