[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive']}
serde = {version = '1.0.101', features = ['derive'], optional = true}

frame-executive = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
frame-support = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
frame-system = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
frame-system-rpc-runtime-api = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}

sp-api = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-block-builder = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-consensus-aura = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-core = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-inherents = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-offchain = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-session = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-std = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-version = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}

pallet-aura = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
pallet-balances = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
pallet-collective = {git = "https://github.com/paritytech/substrate", tag = "v2.0.0-rc6", default-features = false}
pallet-grandpa = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
pallet-membership = {git = "https://github.com/paritytech/substrate", tag = "v2.0.0-rc6", default-features = false}
pallet-randomness-collective-flip = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
pallet-sudo = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
pallet-timestamp = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
pallet-transaction-payment = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
pallet-transaction-payment-rpc-runtime-api = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}

pallet-carbon-assets = {path = '../pallets/carbon-assets', default-features = false}
pallet-carbon-exchange = {path = '../pallets/carbon-exchange', default-features = false}
pallet-standard-assets = {path = '../pallets/standard-assets', default-features = false}

[features]
default = ['std']
std = [
  'codec/std',
  'serde',
  'frame-executive/std',
  'frame-support/std',
  'frame-system/std',
  'frame-system-rpc-runtime-api/std',
  'sp-api/std',
  'sp-block-builder/std',
  'sp-consensus-aura/std',
  'sp-core/std',
  'sp-inherents/std',
  'sp-offchain/std',
  'sp-runtime/std',
  'sp-session/std',
  'sp-std/std',
  'sp-transaction-pool/std',
  'sp-version/std',
  'pallet-aura/std',
  'pallet-balances/std',
  'pallet-grandpa/std',
  'pallet-randomness-collective-flip/std',
  'pallet-sudo/std',
  'pallet-timestamp/std',
  'pallet-transaction-payment/std',
  'pallet-transaction-payment-rpc-runtime-api/std',
  'pallet-collective/std',
  'pallet-membership/std',
  'pallet-carbon-assets/std',
  'pallet-carbon-exchange/std',
  'pallet-standard-assets/std',
]

[build-dependencies]
wasm-builder-runner = {package = 'substrate-wasm-builder-runner', git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
