[package]
authors = ['cryptomancc <https://github.com/ECO2Ledger>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'eco2-runtime'
repository = 'https://github.com/ECO2Ledger/eco2'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = {package = 'substrate-wasm-builder-runner', version = '1.0.5'}

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex-literal = {optional = true, version = '0.3.1'}
serde = {features = ['derive'], optional = true, version = '1.0.101'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '2.0.0'}
frame-executive = {default-features = false, version = '2.0.0'}
frame-support = {default-features = false, version = '2.0.0'}
frame-system = {default-features = false, version = '2.0.0'}
frame-system-benchmarking = {default-features = false, optional = true, version = '2.0.0'}
frame-system-rpc-runtime-api = {default-features = false, version = '2.0.0'}
pallet-aura = {default-features = false, version = '2.0.0'}
pallet-balances = {default-features = false, version = '2.0.0'}
pallet-collective = {default-features = false, version = '2.0.0'}
pallet-grandpa = {default-features = false, version = '2.0.0'}
pallet-membership = {default-features = false, version = '2.0.0'}
pallet-randomness-collective-flip = {default-features = false, version = '2.0.0'}
pallet-sudo = {default-features = false, version = '2.0.0'}
pallet-timestamp = {default-features = false, version = '2.0.0'}
pallet-transaction-payment = {default-features = false, version = '2.0.0'}
pallet-transaction-payment-rpc-runtime-api = {default-features = false, version = '2.0.0'}
sp-api = {default-features = false, version = '2.0.0'}
sp-block-builder = {default-features = false, version = '2.0.0'}
sp-consensus-aura = {default-features = false, version = '0.8.0'}
sp-core = {default-features = false, version = '2.0.0'}
sp-inherents = {default-features = false, version = '2.0.0'}
sp-offchain = {default-features = false, version = '2.0.0'}
sp-runtime = {default-features = false, version = '2.0.0'}
sp-session = {default-features = false, version = '2.0.0'}
sp-std = {default-features = false, version = '2.0.0'}
sp-transaction-pool = {default-features = false, version = '2.0.0'}
sp-version = {default-features = false, version = '2.0.0'}

# ECO2 dependencies
pallet-carbon-assets = {path = '../pallets/carbon-assets', default-features = false}
pallet-carbon-exchange = {path = '../pallets/carbon-exchange', default-features = false}
pallet-standard-assets = {path = '../pallets/standard-assets', default-features = false}

[features]
default = ['std']
runtime-benchmarks = [
  'hex-literal',
  'frame-benchmarking',
  'frame-support/runtime-benchmarks',
  'frame-system-benchmarking',
  'frame-system/runtime-benchmarks',
  'pallet-balances/runtime-benchmarks',
  'pallet-timestamp/runtime-benchmarks',
  'sp-runtime/runtime-benchmarks',
]
std = [
  'codec/std',
  'serde',
  'frame-executive/std',
  'frame-support/std',
  'frame-system/std',
  'frame-system-rpc-runtime-api/std',
  'pallet-aura/std',
  'pallet-balances/std',
  'pallet-grandpa/std',
  'pallet-randomness-collective-flip/std',
  'pallet-sudo/std',
  'pallet-timestamp/std',
  'pallet-transaction-payment/std',
  'pallet-transaction-payment-rpc-runtime-api/std',
  'pallet-collective/std',
  'pallet-membership/std',
  'pallet-carbon-assets/std',
  'pallet-carbon-exchange/std',
  'pallet-standard-assets/std',
  'sp-api/std',
  'sp-block-builder/std',
  'sp-consensus-aura/std',
  'sp-core/std',
  'sp-inherents/std',
  'sp-offchain/std',
  'sp-runtime/std',
  'sp-session/std',
  'sp-std/std',
  'sp-transaction-pool/std',
  'sp-version/std',
]
