[package]
authors = ['cryptomancc <https://github.com/ECO2Ledger>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-carbon-assets'
repository = 'https://github.com/ECO2Ledger/eco2'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive']}

frame-support = {version = '2.0.1', default-features = false}
frame-system = {version = '2.0.1', default-features = false}

sp-runtime = {version = '2.0.1', default-features = false}
sp-std = {version = '2.0.1', default-features = false}

pallet-timestamp = {version = '2.0.1', default-features = false}

[features]
default = ['std']
std = [
  'codec/std',
  'sp-std/std',
  'sp-runtime/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-timestamp/std',
]
