[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-standard-assets'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive']}

frame-support = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
frame-system = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}

sp-runtime = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-std = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}

pallet-timestamp = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}

[dev-dependencies]
sp-core = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}
sp-io = {git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', default-features = false}

[features]
default = ['std']
std = [
  'codec/std',
  'sp-std/std',
  'sp-runtime/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-timestamp/std',
]
